2012-04-19  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_pixbuf): apply
	embedded orientation to pixbuf.

2012-04-16  Peter Bloomfield

	* src/balsa-mblist.c (balsa_mblist_mru_add): add folder to the
	MRU folder list as well as to the given list, if different.

2012-04-16  Peter Bloomfield

	Revert previous commit; fixes
	<URL:http://mail.gnome.org/archives/balsa-list/2012-April/msg00003.html>
	from Ildar Mulyukov

	* src/balsa-app.c (balsa_app_init):
	* src/balsa-app.h:
	* src/save-restore.c (config_mailbox_set_as_special),
	(config_global_load), (config_save):
	* src/sendmsg-window.c (create_info_pane):

2012-03-27  Peter Bloomfield

	Use a single MRU folder list

	* src/balsa-app.h: drop separate Fcc list.
	* src/balsa-app.c (balsa_app_init): ditto.
	* src/save-restore.c (config_mailbox_set_as_special): use
	combined list;
	(config_global_load), (config_save): do not save and restore
	separate Fcc list.
	* src/sendmsg-window.c (create_info_pane): use combined list.

2012-03-27  Peter Bloomfield

	Remember geometry of MRU mailbox tree

	* src/balsa-app.h: new members mru_tree_{width,height}
	* src/balsa-mblist.c (bmbl_mru_size_allocate_cb): save them when
	the dialog's size is changed;
	(bmbl_mru_show_tree): use the saved values.
	* src/save-restore.c (config_global_load), (config_save): save
	and restore them.

2012-03-20  Peter Bloomfield

	* configure.in: work around "intltool-update -m" bug: it knows
	about m4_esyscmd, not m4_esyscmd_s.

2012-03-06  Peter Bloomfield

	* src/main-window.c: update last-check-time only if connected.

2012-03-06  Peter Bloomfield

	* src/main-window.c: check local mailboxes even when network is
	not connected.

2012-03-06  Peter Bloomfield

	* libbalsa/libbalsa-gpgme-cb.c (lb_gpgme_passphrase): build
	with --disable-threads.

2012-02-08  Albrecht Dreß

	* libbalsa/gmime-part-rfc2440.c (g_mime_part_rfc2440_verify):
	check for empty return from GpgME.

2012-02-03  Peter Bloomfield
